@@ -34,7 +34,6 @@ public class Constants {
 	 * Preferences.
 	 */
 	public static final String PREFERENCES_GENERAL_HOME_PAGE = "GeneralHomePage";
-	public static final String PREFERENCES_GENERAL_QUICK_BUTTON = "GeneralQuickButton";
 	public static final String PREFERENCES_GENERAL_BARS_DURATION = "GeneralBarsDuration";
 	public static final String PREFERENCES_GENERAL_BUBBLE_POSITION = "GeneralBubblePosition";
 	public static final String PREFERENCES_SHOW_FULL_SCREEN = "GeneralFullScreen";
